# Ketoan

./: .gitignore  Hung-Phat-Components.md  README.en.md  README.fr.md  README.md  README.zh.md  main.py  plan.md  pyproject.toml  reset_data.py  seed_demo.py  seed_worksheets.py
app/: config.py  email_poller.py  period.py  shortcuts.py  theme.py
data/: database.py  seed.py
data/account_sets/: __init__.py  tt133.json  tt200.json
data/email/: __init__.py  imap_client.py  oauth.py
data/migrations/: 001_initial.sql  002_journal.sql  003_sales_inventory.sql  004_purchase_assets.sql  005_book_closing.sql  006_costing.sql  007_invoice_accounts.sql  008_email_invoice_import.sql  009_invoice_line_accounts.sql  010_opening_balance.sql  011_bom.sql  012_journal_partner.sql  013_product_sheet.sql
data/repositories/: account_repo.py  bom_repo.py  closing_repo.py  costing_repo.py  fixed_asset_repo.py  inventory_repo.py  invoice_repo.py  item_repo.py  journal_repo.py  material_sheet_repo.py  opening_repo.py  partner_repo.py  product_sheet_repo.py  settings_repo.py
domain/: money.py
domain/models/: account.py  bom.py  cash.py  company.py  costing.py  fixed_asset.py  inventory.py  invoice.py  item.py  journal.py  material_sheet.py  opening.py  partner.py  product_sheet.py  report.py  tax.py
domain/services/: account_service.py  bom_service.py  cash_service.py  closing_service.py  company_service.py  costing_service.py  dashboard_service.py  document_service.py  einvoice_parser.py  email_config_service.py  (+14 more)
reports/: __init__.py  report_tables.py
ui/: icons.py  tokens.py
(+81 files in other folders)
