[project]
name = "ketoan"
version = "0.1.0"
description = "Hung Phat Accounting Suite - Vietnamese accounting (TT200) desktop app"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]
reports = [
    "openpyxl>=3.1",
    "reportlab>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
